--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,31 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary folders
+.tmp/
+.temp/
+.cache/
+.qodo/
+
+# Package manager lock files (keep only one)
+# yarn.lock (keeping package-lock.json)
+
+# Optional: if using pnpm and npm together
+# pnpm-lock.yaml
